# botas

./: .eslintrc.js  .gitattributes  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  Skills.md  bot-spec.md  build-all.sh  docfx.json  eslint.config.js  jest.config.js  package-lock.json  package.json  session-transcript.md  setVersion.js  skills-lock.json  tsconfig.build.json  tsconfig.json  version.json
.azdo/: cd.yaml  ci-pr.yaml
.github/: copilot-instructions.md
.squad/: .first-run  commit-msg-typing.txt  commit-msg.txt  decisions.md  routing.md  team.md
docs/: Architecture.md  COMPARISON_REPORT.md  Setup.md  bot-spec.md
docs-site/: _config.yml  auth-setup.md  authentication.md  generate-api-docs.sh  getting-started.md  index.md  logging.md  middleware.md  observability.md  package-lock.json  package.json  setup.md  teams-features.md  typing-activity.md  versions.json
docs-site-vitepress/: getting-started.md  package.json
dotnet/: .gitignore  Botas.slnx  docfx.json  env-to-launch-settings.mjs
e2e/: Botas.E2ETests.slnx  env2azad.ps1  env2azad.sh  run-all-e2e.sh  run-api-tests.sh  run-dn.sh  run-e2e-dn.sh  run-e2e-py.sh  run-e2e-ts.sh  run-playwright-tests.ps1  run-playwright-tests.sh  run-py.sh  run-ts.sh
go/: go.mod
node/: eslint.config.js  package-lock.json  package.json  tsconfig.json
python/samples/otel-bot/: README.md  main.py  pyproject.toml
specs/: ActivityPayloads.md  Architecture.md  Configuration.md  Contributing.md  Middleware.md  ProactiveMessaging.md  README.md  Samples.md  Setup.md  activity-schema.md  architecture.md  (+20 more)
(+246 files in other folders)
